// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: RadioButtonField should render a disabled radio button field 1`] = `
.c6 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 400;
  color: hsl(200,10%,20%);
}

.c3 {
  opacity: 0;
  height: 0;
  width: 0;
  margin: 0;
  position: absolute;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: hsl(0,0%,90%);
  border: 2px solid hsl(0,0%,90%);
}

.c4:after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(0,0%,90%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  line-height: 16px;
  width: 16px;
  height: 16px;
  cursor: cursor;
}

.c2 input:checked ~ span {
  background-color: transparent;
}

.c2 input:checked ~ span:after {
  display: block;
}

.c2 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

.c7 + .c0 {
  margin-top: 8px;
}

.c7 .c5 {
  cursor: pointer;
  padding-left: 8px;
}

.c1 + .c0 {
  margin-top: 8px;
}

.c1 .c5 {
  cursor: not-allowed;
  padding-left: 8px;
}

<div>
  <div
    class="c0 c1"
  >
    <label
      class="c2"
      for="rb"
    >
      <input
        class="c3"
        disabled=""
        id="rb"
        name="rb"
        type="radio"
      />
      <span
        aria-hidden="true"
        class="c4"
        disabled=""
      />
    </label>
    <label
      class="c5 c6"
      for="rb"
    >
      My Label
    </label>
  </div>
</div>
`;

exports[`component: RadioButtonField should render a radio button field 1`] = `
.c6 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 400;
  color: hsl(200,10%,20%);
}

.c3 {
  opacity: 0;
  height: 0;
  width: 0;
  margin: 0;
  position: absolute;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: transparent;
  border: 2px solid hsl(200,96%,11%);
}

.c4:after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(200,96%,35%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  line-height: 16px;
  width: 16px;
  height: 16px;
  cursor: pointer;
}

.c2 input:checked ~ span {
  border-color: hsl(200,96%,35%);
  background-color: transparent;
}

.c2 input:checked ~ span:after {
  display: block;
}

.c2 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

.c1 + .c0 {
  margin-top: 8px;
}

.c1 .c5 {
  cursor: pointer;
  padding-left: 8px;
}

<div>
  <div
    class="c0 c1"
  >
    <label
      class="c2"
      for="rb"
    >
      <input
        class="c3"
        id="rb"
        name="rb"
        type="radio"
      />
      <span
        aria-hidden="true"
        class="c4"
      />
    </label>
    <label
      class="c5 c6"
      for="rb"
    >
      My Label
    </label>
  </div>
</div>
`;

exports[`component: RadioButtonField should support margin space props 1`] = `
.c6 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 400;
  color: hsl(200,10%,20%);
}

.c3 {
  opacity: 0;
  height: 0;
  width: 0;
  margin: 0;
  position: absolute;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: transparent;
  border: 2px solid hsl(200,96%,11%);
}

.c4:after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(200,96%,35%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  line-height: 16px;
  width: 16px;
  height: 16px;
  cursor: pointer;
}

.c2 input:checked ~ span {
  border-color: hsl(200,96%,35%);
  background-color: transparent;
}

.c2 input:checked ~ span:after {
  display: block;
}

.c2 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

.c7 + .c0 {
  margin-top: 8px;
}

.c7 .c5 {
  cursor: pointer;
  padding-left: 8px;
}

.c8 + .c0 {
  margin-top: 8px;
}

.c8 .c5 {
  cursor: not-allowed;
  padding-left: 8px;
}

.c1 {
  margin-left: 16px;
}

.c1 + .c0 {
  margin-top: 8px;
}

.c1 .c5 {
  cursor: pointer;
  padding-left: 8px;
}

<div>
  <div
    class="c0 c1"
  >
    <label
      class="c2"
      for="Ackermann"
    >
      <input
        class="c3"
        id="Ackermann"
        name="rbf"
        type="radio"
      />
      <span
        aria-hidden="true"
        class="c4"
      />
    </label>
    <label
      class="c5 c6"
      for="Ackermann"
    >
      Mikasa
    </label>
  </div>
</div>
`;
